# gtk-helloworld-cpp

./: .clangd  CMakeLists.txt  Makefile
.cache/clangd/index/: helloworld.cxx.B857E002E798D8A7.idx  helloworld.h.65EAD15980D07ECB.idx  main.cxx.B68A3FC9E7C7FBE5.idx
src/: CMakeLists.txt  helloworld.cxx  helloworld.h  main.cxx
